--- a/Accessing_APIs_review_lab.ipynb
+++ b/Accessing_APIs_review_lab.ipynb
@@ -778,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 43,
       "metadata": {
         "id": "W1X2Id-fj7BZ"
       },
@@ -803,7 +803,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 509
+          "height": 315
         },
         "id": "-1hLuC1Cj7Ba",
         "outputId": "08a614b3-10fd-49f6-f3a5-79086f385af7"
@@ -854,12 +854,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 42,
       "metadata": {
-        "id": "Amvm-FmKj7Bd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Amvm-FmKj7Bd",
+        "outputId": "eb218b38-dc54-472d-92dc-499926417ec8"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "45"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ],
+      "source": [
+        "url=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/PY0101EN/labs/example1.txt?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDA0321ENSkillsNetwork928-2022-01-01&cm_mmc=Email_Newsletter-_-Developer_Ed%2BTech-_-WW_WW-_-SkillsNetwork-Courses-IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork-19487395&cm_mmca1=000026UJ&cm_mmca2=10006555&cm_mmca3=M12345678&cvosrc=email.Newsletter.M12345678&cvo_campaign=000026UJ\"\n",
+        "s=requests.get(url)\n",
+        "path=os.path.join(os.getcwd(),\"example.txt\")\n",
+        "f=open(path,\"wb\")\n",
+        "f.write(s.content)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -867,7 +888,7 @@
         "id": "6pcckiYTj7Be"
       },
       "source": [
-        "Double-click **here** for the solution.\n",
+        "*Double*-click ***here*** for the solution.\n",
         "\n",
         "<!-- The answer is below:\n",
         "\n",
